<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@mipmap/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="View.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.406">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/blue_border"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/title"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:textSize="28sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/playerOne"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/blue_border"
                android:drawableStart="@drawable/ximage"
                android:drawablePadding="8dp"
                android:hint="@string/enter_player_one"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/primary"
                tools:ignore="Autofill,TextFields" />

            <EditText
                android:id="@+id/playerTwo"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/blue_border"
                android:drawableStart="@drawable/oimage"
                android:drawablePadding="8dp"
                android:hint="@string/enter_player_two"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/primary"
                tools:ignore="Autofill,TextFields" />

            <Button
                android:id="@+id/startGameBt"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:text="@string/start"
                android:textColor="@color/lightBlue"
                android:textSize="20sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>