<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context="View.GameScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="ObsoleteLayoutParam">

            <LinearLayout
                android:id="@+id/playerOneLayout"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@drawable/white_box"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/playerOne"
                    android:id="@+id/playerOneName"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/primary"
                    android:maxLines="1" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@mipmap/xplayer"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_gravity="center"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:id="@+id/playerTwoLayout"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/white_box">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/playerTwo"
                    android:id="@+id/playerTwoName"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/primary"
                    android:maxLines="1" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:importantForAccessibility="no"
                    android:src="@mipmap/oplayer"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_gravity="center" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/playerTurnText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/player_turn"
            android:textColor="@color/green"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:id="@+id/image1"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_weight="1"
                android:background="@drawable/boardtile"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:padding="20dp"
                android:adjustViewBounds="true"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/image2"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_weight="1"
                android:background="@drawable/boardtile"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:padding="20dp"
                android:adjustViewBounds="true"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/image3"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_weight="1"
                android:background="@drawable/boardtile"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:padding="20dp"
                android:adjustViewBounds="true"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:id="@+id/image4"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_weight="1"
                android:background="@drawable/boardtile"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:padding="20dp"
                android:adjustViewBounds="true"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/image5"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_weight="1"
                android:background="@drawable/boardtile"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:padding="20dp"
                android:adjustViewBounds="true"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/image6"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_weight="1"
                android:background="@drawable/boardtile"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:padding="20dp"
                android:adjustViewBounds="true"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:id="@+id/image7"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_weight="1"
                android:background="@drawable/boardtile"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:padding="20dp"
                android:adjustViewBounds="true"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/image8"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_weight="1"
                android:background="@drawable/boardtile"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:padding="20dp"
                android:adjustViewBounds="true"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/image9"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_weight="1"
                android:background="@drawable/boardtile"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:padding="20dp"
                android:adjustViewBounds="true"
                tools:ignore="ContentDescription" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
